--- a/Scripts/case_study_blend.Rmd
+++ b/Scripts/case_study_blend.Rmd
@@ -29,18 +29,25 @@ We will use two R packages:
 - `survHE`  for computing external survival estimates with expert judgement
 
 Install the packages
-```{r install pacakges, eval=FALSE}
-# For Windows:
-install.packages("survHE",
-	               repos=c("http://www.statistica.it/gianluca/R",
-		                     "https://cran.rstudio.org",
-                         "https://inla.r-inla-download.org/R/stable"),
-	               dependencies=TRUE)
+```{r install packages, eval=TRUE}
+if (.Platform$OS.type == "windows") {
+  if ("survHE" %in% rownames(installed.packages()) == FALSE) {
+    install.packages("survHE",
+                     repos = c("http://www.statistica.it/gianluca/R",
+                               "https://cran.rstudio.org",
+                               "https://inla.r-inla-download.org/R/stable"),
+ 	             dependencies = TRUE)
+   }
+}
 
-install.packages("INLA",
-                 repos=c(getOption("repos"),
-                         INLA="https://inla.r-inla-download.org/R/stable"),
-                 dep=TRUE)
+if (.Platform$OS.type == "windows") {
+  if ("INLA" %in% rownames(installed.packages()) == FALSE) {
+    install.packages("INLA",
+                     repos = c(getOption("repos"),
+                     INLA = "https://inla.r-inla-download.org/R/stable"),
+                     dep = TRUE)
+   }
+}
 ```
 
 Load the packages
